[package]
name = "prqlx"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A procedural macro for using PRQL in sqlx"
repository = "https://github.com/Suyashtnt/prqlx"
readme = "README.md"
keywords = ["sqlx", "prql", "sql", "query", "macro"]
categories = ["database"]
authors = ["Suyash <suyashtnt@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prql-compiler = "0.12.2"
quote = "1.0.36"
syn = "2.0.39"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7.4", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
] }

[lib]
proc-macro = true

[profile.dev.package.sqlx-macros]
opt-level = 3
